--- a/src/component/Css/ecommerce.css
+++ b/src/component/Css/ecommerce.css
@@ -61,3 +61,63 @@ a.addToCart {
     text-decoration: none;
     color: #fff;
 }
+
+
+/* Responsive styles using media queries */
+@media (max-width: 1200px) {
+    .Products {
+        justify-content: center;
+    }
+
+    .product {
+        width: 30%;
+        margin: 0 1rem;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 992px) {
+    .Products {
+        justify-content: space-around;
+    }
+
+    .product {
+        width: 45%;
+    }
+}
+
+@media (max-width: 768px) {
+    .Products {
+        justify-content: center;
+    }
+
+    .product {
+        width: 60%;
+    }
+}
+
+/* Additional media query for smaller screens */
+@media (max-width: 576px) {
+    .Products {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .product {
+        width: 100%;
+    }
+
+    .product img {
+        height: 180px;
+    }
+
+    .product h3 a {
+        font-size: 1rem;
+        height: auto;
+        margin-bottom: 8px;
+    }
+
+    p.description {
+        height: auto;
+    }
+}
