--- a/src/component/Css/about.css
+++ b/src/component/Css/about.css
@@ -1,7 +1,42 @@
-div#about {
-    /* margin-top: 4rem; */
+#about {
     padding: 30px;
 }
-div#about h1 {
+
+#about h1 {
     padding-bottom: 20px;
+}
+
+#about p {
+    margin-bottom: 20px;
+}
+
+/* Media query for screens smaller than 768px */
+@media (max-width: 768px) {
+    #about {
+        padding: 20px;
+    }
+
+    #about h1 {
+        padding-bottom: 10px;
+        font-size: 24px;
+    }
+
+    #about p {
+        font-size: 14px;
+    }
+}
+
+/* Media query for screens smaller than 480px */
+@media (max-width: 480px) {
+    #about {
+        padding: 10px;
+    }
+
+    #about h1 {
+        font-size: 20px;
+    }
+
+    #about p {
+        font-size: 12px;
+    }
 }
