--- a/src/component/Css/header.css
+++ b/src/component/Css/header.css
@@ -5,6 +5,7 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Schibsted Grotesk', sans-serif;
 }
+
 header {
     width: 100%;
     height: 80px;
@@ -48,13 +49,56 @@ header nav ul li a {
     color: #000;
 }
 
-header nav ul li a svg{
-    margin-top: 0.5rem;
-}
-
 .count{
     background-color: #000;
     color: #fff;
     padding: .5rem .7rem;
     border-radius: 100%;
+}
+
+
+
+
+/* Media Queries */
+
+/* Small screens */
+@media (max-width: 767px) {
+    header {
+        padding: 0 15px;
+        height: 60px;
+    }
+
+    header h1 {
+        font-size: 18px;
+    }
+
+    header nav ul li a {
+        padding-left: 12px;
+    }
+
+    .count {
+        padding: 0.3rem 0.5rem;
+    }
+}
+
+/* Medium screens */
+@media (min-width: 768px) and (max-width: 1023px) {
+    header h1 {
+        font-size: 22px;
+    }
+
+    header nav ul li a {
+        padding-left: 18px;
+    }
+}
+
+/* Large screens */
+@media (min-width: 1024px) {
+    header h1 {
+        font-size: 26px;
+    }
+
+    header nav ul li a {
+        padding-left: 25px;
+    }
 }
